[project]
name = "naas"
version = "1.0.0a2"
description = "Netmiko As A Service - REST API wrapper for Netmiko"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brett Lykins", email = "lykinsbd@gmail.com"}
]

dependencies = [
    "aniso8601>=8.0.0",
    "bcrypt>=3.1.7",
    "cryptography>=2.8",
    "flask>=1.1.1",
    "flask-restful>=0.3.8",
    "gunicorn>=20.0.4",
    "netmiko>=3.0.0",
    "paramiko>=2.7.1",
    "pyserial>=3.4",
    "pyyaml>=5.3",
    "redis>=3.4.1",
    "rq>=1.2.2",
    "scp>=0.13.2",
    "textfsm>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
    "fakeredis>=2.21.0",
    "ipython>=8.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=naas --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["naas"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 79
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B904"]  # Line too long, exception chaining

[tool.ruff.lint.isort]
known-first-party = ["naas"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
