# settings for setup.py
[bdist_wheel]
universal = 1

[metadata]
author = Brett Lykins
author_email = lykinsbd@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX
description = Netmiko As A Service API
keywords =
    ssh
    cli
    cisco
    netmiko
    network automation
    naas
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
platforms =
    Linux
python_requires = >=3.7
url = http://pages.github.com/lykinsbd/naas/

[options]
install_requires =
    aniso8601>=8.0.0
    asn1crypto>=1.3.0
    bcrypt>=3.1.7
    cffi>=1.13.2
    Click>=7.0
    cryptography>=2.8
    Flask>=1.1.1
    Flask-RESTful>=0.3.8
    gunicorn>=20.0.4
    itsdangerous>=1.1.0
    Jinja2>=2.11.1
    MarkupSafe>=1.1.1
    netmiko>=3.0.0
    ntc-templates>=1.3.0
    paramiko>=2.7.1
    pycparser>=2.19
    PyNaCl>=1.3.0
    pyserial>=3.4
    pytz>=2019.3
    PyYAML>=5.3
    redis>=3.4.1
    rq>=1.2.2
    scp>=0.13.2
    six>=1.14.0
    textfsm>=1.1.0
    Werkzeug>=0.16.1


packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    naas = naas.app:app

[options.extras_require]
dev =
    coverage
    docutils
    flake8
    flake8-quotes
    ipython
    packaging
    pre-commit
    pylint
    safety
    setuptools
    sphinx
    sphinx-rtd-theme
    sphinx_selective_exclude
    tox
    twine

[options.package_data]
# This section defines the files that will be included in the finished naas package. By default, all Python packages
# under naas will be included. That means any folder that contains a file called __init__.py. Any .py files in those
# folders will get included. If you need to include files with non-.py extensions, list them here.
naas =
    tests/*

[options.packages.find]
include =
    naas
    naas.*


# settings for flake8
[flake8]
doctests = True
exclude =
    # Ignored folders
    .eggs
    .git
    lib
    bin
    include
    build
    dist
    naas.egg-info
    # The only python file under here is a sphinx-specific config file with its own conventions
    docs
ignore =
    # line break before binary operator; see https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
    W503
max-line-length = 120
inline-quotes = "
max-complexity = 10


# settings for coverage.py
[coverage:run]
branch = True
source = naas
omit =
    # Ignore test coverage of tests.
    naas/tests/*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
